LPDEV-723 fix blurring

--- a/src/Lykke.Service.PayInvoicePortal/wwwroot/src/css/style.css
+++ b/src/Lykke.Service.PayInvoicePortal/wwwroot/src/css/style.css
@@ -2594,6 +2594,8 @@ select.bs-select-hidden, select.selectpicker { display: none !important; }
 
 .page_tab__item--active a { color: #111111; }
 
+.body--menu_opened .page_tab { -webkit-filter: blur(5px); filter: blur(5px); }
+
 body { color: #333333; }
 
 hr { max-width: none; width: 100%; border: 0; border-bottom: 1px solid #ebedef; }
